# govpay

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/processed/: health_insurance.json  insurance.json  metadata.json  pension.json  professional_allowances.json  salary_grades.json  salary_points.json  supervisory_allowances.json
data/raw/: civil_service_insurance.csv  health_insurance_115.csv  pension_old.csv  professional_allowance_table_1.csv  professional_allowance_table_2.csv  professional_allowance_table_3.csv  professional_allowance_table_4.csv  professional_allowance_table_7.csv  professional_allowance_table_8.csv  salary_grades_114.csv  salary_points_114.csv  supervisory_allowance.csv
src/salary_data/: __init__.py  calculators.py  cli.py  exporters.py  loaders.py  schemas.py
tests/: test_calculators.py  test_validators.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: health_insurance.json  insurance.json  metadata.json  pension.json  professional_allowances.json  salary_grades.json  salary_points.json  supervisory_allowances.json
web/src/: dataLoader.ts  icons.ts  main.ts  salaryCalculator.ts  scenarios.ts  style.css  trust.ts  types.ts
web/src/components/: AnnualProjection.ts  DataBrowser.ts  Home.ts  PromotionCompare.ts  SalaryBreakdown.ts  SalaryForm.ts  ShareCard.ts
