[project]
name = "civil-service-salary-data"
version = "0.1.0"
description = "Taiwan civil service salary data processor and static data generator"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.scripts]
salary-data = "salary_data.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salary_data"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
